# LOBSimulater

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  backtester.hpp  bench_order_book.cpp  benchmarks_CMakeLists.txt  bindings_CMakeLists.txt  chart_script.py  ci.yml  metrics.hpp  order_book.hpp  pybind_module.cpp  script.py  setup.py  signals.hpp  strategy_examples.cpp  test_order_book.cpp  tests_CMakeLists.txt
.github/workflows/: ci.yml
benchmarks/: CMakeLists.txt  bench_order_book.cpp
bindings/: CMakeLists.txt  pybind_module.cpp
docs/: Doxyfile  architecture.md  signals.md
examples/: market_maker.cpp  momentum.cpp  signal_execution.cpp
examples/python_notebooks/: research_demo.ipynb
include/lob/: backtester.hpp  event.hpp  metrics.hpp  order.hpp  order_book.hpp  signals.hpp
src/: backtester.cpp  main.cpp  metrics.cpp  order_book.cpp  signals.cpp
tests/: CMakeLists.txt  test_backtester.cpp  test_order_book.cpp  test_signals.cpp
